# rotate-pdf

./: LICENSE  README.md  pyproject.toml
src/rotate_pdf/: __init__.py  __main__.py  rotation.py
tests/: test_rotate_pdf.py
